# CoursePaper2

./: .coverage  main.py  pyproject.toml
data/: cleaner.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_vacancies_py.html  z_145eef247bfb46b6_work_with_files_py.html
src/: external_api.py  vacancies.py  work_with_files.py
tests/: test_external_api.py  test_vacancies.py  test_work_with_files.py
